@@ -20,12 +20,14 @@ import org.testng.IHookable;
 import org.testng.IInvokedMethod;
 import org.testng.IInvokedMethodListener;
 import org.testng.IRetryAnalyzer;
+import org.testng.ISuite;
 import org.testng.ITestClass;
 import org.testng.ITestContext;
 import org.testng.ITestNGMethod;
 import org.testng.ITestResult;
 import org.testng.Reporter;
 import org.testng.SuiteRunState;
+import org.testng.SuiteRunner;
 import org.testng.TestException;
 import org.testng.TestNGException;
 import org.testng.collections.Lists;
@@ -176,12 +178,13 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
       ITestContext testContext) {
     FailureContext failure = new FailureContext();
     failure.count = failureCount;
+    Collection<IDataProviderListener> dpListeners = dataProviderListeners();
     do {
       failure.instances = Lists.newArrayList();
       Map<String, String> allParameters = Maps.newHashMap();
       // TODO: This recreates all the parameters every time when we only need
       // one specific set. Should optimize it by only recreating the set needed.
-      ParameterHandler handler = new ParameterHandler(annotationFinder(), m_dataproviderListeners);
+      ParameterHandler handler = new ParameterHandler(annotationFinder(), dpListeners);
 
       ParameterBag bag = handler.createParameters(arguments.getTestMethod(),
           arguments.getParameters(), allParameters, testContext);
@@ -205,6 +208,17 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
 
   public void runTestResultListener(ITestResult tr) {
     TestListenerHelper.runTestListeners(tr, m_notifier.getTestListeners());
+  }
+
+  private Collection<IDataProviderListener> dataProviderListeners() {
+    ISuite suite = this.m_testContext.getSuite();
+    Collection<IDataProviderListener> dpListeners = Sets.newHashSet(m_dataproviderListeners);
+    if (suite instanceof SuiteRunner) {
+      Collection<IDataProviderListener> listeners = ((SuiteRunner) suite)
+          .getDataProviderListeners();
+      dpListeners.addAll(listeners);
+    }
+    return dpListeners;
   }
 
   /**
@@ -752,7 +766,7 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
       long start = System.currentTimeMillis();
 
       Map<String, String> allParameterNames = Maps.newHashMap();
-      ParameterHandler handler = new ParameterHandler(annotationFinder(), m_dataproviderListeners);
+      ParameterHandler handler = new ParameterHandler(annotationFinder(), dataProviderListeners());
 
       ParameterBag bag = handler.createParameters(
           arguments.getTestMethod(),
